--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">New York Times Article Seacher</string>
+    <string name="search_hint">Search article by keywords.</string>
+
 </resources>
